[Squad] Use UA styling for form inside table elements.

We did not implement UA style as specified for form elements inside
table elements. This CL removes the hardcoded way of not creating layout
objects and instead add display:none to the UA style sheet as specified.

We introduce a new internal pseudo class :-internal-is-html because the
rule should only apply in html documents. This is also what Gecko does
with its :-moz-is-html. The pseudo class is only allowed in UA sheets.

The relationship with Squad is that we get rid of the dependency on
ancestor layout objects in LayoutObjectIsNeeded.

Bug: 847763, 843520
Change-Id: Ibc83b78493843b1a0503fbb65e509090fe295313
Reviewed-on: https://chromium-review.googlesource.com/1078348
Reviewed-by: Morten Stenshorne <mstensho@chromium.org>
Commit-Queue: Rune Lillesveen <futhark@chromium.org>
Cr-Commit-Position: refs/heads/master@{#562789}
Former-commit-id: 9cc5d1b3afcbf778e5e1655731716f4b7b496131