third_party/blink/renderer/core/css/css_selector.h
@@ -236,6 +236,7 @@ class CORE_EXPORT CSSSelector {
     kPseudoHostContext,
     kPseudoShadow,
     kPseudoSpatialNavigationFocus,
+    kPseudoIsHtml,
     kPseudoListBox,
     kPseudoHostHasAppearance,
     kPseudoSlotted,
